<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="title_selection"><xliff:g id="COUNT">%1$d</xliff:g> selected</string>
    <string name="beginmerge">Start to merge</string>
    <string name="widget_name">GO Backup(4x1)</string>
    <string name="nobackupentriesselected">Please select backup contents</string>
    <string name="backupcontents">Contents:</string>
    <string name="msg_backup_failed">Backup failed</string>
    <string name="msg_backuping">Backup is in progress, please try again later</string>
    <string name="last_backup_time">Last backup :\u0020</string>
    <string name="setting">Settings</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="senior">Premium Version</string>
    <string name="help_name">Help</string>
    <string name="notes">Rules</string>
    <string name="problems">Q&#38;A</string>
    <string name="attentions">Rules</string>
    <string name="attentions_one">1. Normal backups</string>
    <string name="attentions_one_content">10 normal backups are supported for general user . If the number has reached to 10, you
need to delete some before you do a new backup.</string>
    <string name="attentions_two">2. Rules of merging backups</string>
    <string name="attentions_two_content">All backups are merged to a comprehensive backup through \'Merging\' operation.Backups can\'t be merged when you only have one backup.</string>
    <string name="attentions_three">3. Scheduled backup</string>
    <string name="attentions_three_content">There is only one scheduled backup, old one would be covered by the new one.</string>
    <string name="attentions_four">4. Cloud backup</string>
    <string name="attentions_four_content">Dropbox and Google Drive are supported in cloud backup. And you can choose any one to
sync your backup files.</string>
    <string name="attentions_four_content_two">If the same file has already been uploaded, it will be replaced with the new one.</string>
    <string name="attentions_five">5. Backup path</string>
    <string name="attentions_five_content">Backups can be saved to built-in storage or external storage, and external storage is the
default. If current path is removed or damaged, it would be switched to another path automatically.</string>
    <string name="attentions_six">6. Calendar account</string>
    <string name="attentions_six_content">If guests are included in calendar, they would receive an email during the restoration of
 calendar.</string>
	<string name="help_title_freeze_app">7. Freeze apps</string>
  	<string name="help_freeze_app">A frozen app is disabled completely – it won’t appear in your app drawer and be started in the background automatically. A frozen app cannot run in any way until you “defrost” it. Recommend to freeze lower usage apps to reduce power and memory consumption.</string>
    <string name="root_one">1. Why need ROOT permission?</string>
    <string name="root_function_one">To backup app data</string>
    <string name="root_function_two">To backup system settings</string>
    <string name="root_function_three">Hide installation interface when restoring apps</string>
    <string name="root_more_information">More information:</string>
    <string name="root_two">2. How to restore my data and apps with GO Backup after flashing a ROM?</string>
    <string name="root_function_two_one">Install GO Backup again after flashing a ROM, and you can find the backups in your phone
when you open GO Backup. Then, choose the one you need to restore.</string>
    <string name="root_three">3. I don\'t want to receive contacts notification, what can I do?</string>
    <string name="root_function_three_one">You can close contacts notification through the operation below: GO Backup->More-
>setting, close the contacts notification.</string>
    <string name="root_four">4. Backups can\'t be found after the phone upgraded to Android 4.2, what can I do?</string>
    <string name="root_function_four_one">When you upgrade your phone to android 4.2, all files included the backups were moved to
a new\‘0\’folder, so GO Backup can\'t find them. You can move the old backups to the
backup path you are using now, then they can be found.</string>
    <string name="root_five">5. I have purchased GO Backup, can I use premium features after re-installation?</string>
    <string name="root_function_five_one">When you re-install GO Backup, there is no information about your payment. And when you
purchase again , Google Play would update your account info and recognize the payment
record. Then you can use premium version without paying for it again.</string>
    <string name="app_name">GO Backup</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="restore">Restore</string>
    <string name="ok">OK</string>
    <string name="sure">Yes</string>
    <string name="finish">Finish</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="attention">Attention</string>
    <string name="msg_loading">Loading…</string>
    <string name="msg_no_record_to_merge">Less than 2 backups,merage operation cannot be continued.</string>
    <string name="msg_no_record_to_delete">No backup exists</string>
    <string name="msg_delete_record">Delete Backup?</string>
    <string name="alert_dialog_title">Tip</string>
    <string name="contacts">Contacts</string>
    <string name="sms">SMS</string>
    <string name="mms">MMS</string>
    <string name="bookmark">Browser Bookmark</string>
    <string name="call_log">Call Log</string>
    <string name="calendar">Calendar</string>
    <string name="user_dictionary">User Dictionary</string>
    <string name="wifi_access_points">Wi-Fi Access Points</string>
    <string name="golauncher_setting">GO Launcher EX Preferences</string>
    <string name="launcher_layout">Built-in Launcher Layout</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="ringtone">Ringtone</string>
    <string name="applications">App</string>
    <string name="group_system_data">System Setting</string>
    <string name="group_system_app">System Applications</string>
    <string name="image">images</string>
    <string name="group_user_image">Image</string>
    <string name="group_user_data">User Data</string>
    <string name="group_user_app">User Applications</string>
    <string name="database_file">Backup Database File</string>
    <string name="export_contacts">Export contacts</string>
    <string name="export_sms">Export messages</string>
    <string name="root">ROOTED</string>
    <string name="unroot">UNROOT</string>
    <string name="unavailable">Unavailable</string>
    <string name="dropbox_backup_path">Apps/GO Backup<xliff:g id="PATH">%1$s</xliff:g></string>
    <string name="dropbox">Dropbox</string>
    <string name="google_drive">Google Drive</string>
    <string name="feature_introductioin_1">Data protection &amp; security</string>
    <string name="feature_introductioin_2">Stable and fast</string>
    <string name="feature_introductioin_3">Any time, any where</string>
    <string name="btn_create_account">Create GO Account</string>
    <string name="btn_login">Sign In</string>
    <string name="copy_right_info">Copyright © 2004-2012 All Rights Reserved\n3G.cn</string>
    <string name="product_feature">Simple Fast Safe Stable</string>
    <string name="btn_new_backup">New Backup</string>
    <string name="btn_restore">Restore</string>
    <string name="main_label_current_user">Current user: </string>
    <string name="sd_card_unavailable">SD card unavailable</string>
    <string name="dialog_title_operation">Operation</string>
    <string name="no_backup_record_prompt">No backup</string>
    <string name="prompt_tap_to_backup">Tap to start backup</string>
    <string name="prompt_tap_to_restore">Tap to restore</string>
    <string name="root_tab_prompt">"UNROOT mode" is running...</string>
    <string name="title_confirm_export">Confirm export</string>
    <string name="msg_export_contacts">Export your contacts list to file</string>
    <string name="msg_export_sms">Export your messages to file</string>
    <string name="msg_export_successfully">Export successfully</string>
    <string name="msg_export_failed">Failed to export!</string>
    <string name="msg_last_backup_time">Last backup :\u0020</string>
    <string name="msg_backup_nums">\u0020backups</string>
    <string name="title_backup_path">Path :\u0020</string>
    <string name="title_sd_card_storage">SD card :\u0020</string>
    <string name="msg_no_backups">No Backups</string>
    <string name="msg_sd_card_unmounted">Unmounted</string>
    <string name="title_backup_time">Backup Time :\u0020</string>
    <string name="msg_root_user_alert">! Device State : <xliff:g id="STATE">%1$s</xliff:g>\n\nWith ROOT permission granted, you can : \n\n1.Backup data of apps\n2.Backup/restore protected apps\n3.Restore apps silently</string>
    <string name="msg_unroot_user_alert">! Device State : <xliff:g id="STATE">%1$s</xliff:g>\n\nNow you can:\n1.Backup/restore contacts, messages, call logs, etc\n2.Backup/restore apps\' installation packages\n\nYou cannot:\n1.Backup data of apps\n2.Backup/restore protected apps\n3.Restore apps silently</string>
    <string name="msg_backup_merged">Merged Backup</string>
    <string name="msg_update_old_backup">Please wait for updating old backups...</string>
    <string name="msg_limit_record">Reach the limit of backups(<xliff:g id="COUNT">%1$d</xliff:g> backups)</string>
    <string name="btn_limit_record_manage_record">Manage backups</string>
    <string name="btn_web_new_backup">New Cloud Backup</string>
    <string name="btn_web_restore">Restore</string>
    <string name="cloud_backup_tip">The backups will be uploaded to <xliff:g id="SERVICE">%1$s</xliff:g></string>
    <string name="local_backup">Local Backup</string>
    <string name="cloud_backup">Cloud Backup</string>
    <string name="msg_dropbox_loged_in">You had connected with Dropbox</string>
    <string name="main_net_no_data">No data</string>
    <string name="sign_in">Sign in</string>
    <string name="account_error">Error with your account, please sign in again</string>
    <string name="title_select_app_backup_type">Choose app backup content</string>
    <string name="title_select_app_restore_type">Choose app restore content</string>
    <string name="title_sort_apps">Sorting mode for apps</string>
    <string name="title_new_backup">New Backup</string>
    <string name="introduction_what_is_root">What is Root？</string>
    <string name="introduction_how_to_get_root">How to get root permission?</string>
    <string name="crash_dialog_title">GO Backup Error Feedback</string>
    <string name="crash_dialog_text">GO Backup unexpected error occurs. You can help us to make it better by sending us feedback now. NO Personal info shall be collected.</string>
    <string name="crash_yes">Contact US</string>
    <string name="crash_no">Cancel</string>
    <string name="tutorial_merge_title">Merge backups</string>
    <string name="tutorial_merge_tips1">Merge selected backups to a comprehensive backup</string>
    <string name="tutorial_merge_tips2">it will NOT change or delete your old backups but discard duplicate items when merging</string>
    <string name="tutorial_ok">Got it</string>
    <string name="title_freeze_app">Freeze Apps</string>
    <string name="tutorial_freeze_app">A frozen app won\'t appear in your app drawer and it won\'t auto start in the background. Recommend to freeze lower usage apps.</string>
</resources>