<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/local_function_frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/local_function_frame"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingRight="17dp" >

        <TextView
            android:id="@+id/root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="16dp"
            android:text="@string/root_one"
            android:textColor="@color/root_help_text_color"
            android:textSize="18sp" >
        </TextView>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:src="@drawable/help_dot" >
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/root_function_one"
                android:textColor="@color/help_body_text_color"
                android:textSize="15sp" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:src="@drawable/help_dot" >
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/root_function_two"
                android:textColor="@color/help_body_text_color"
                android:textSize="15sp" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:src="@drawable/help_dot" >
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/root_function_three"
                android:textColor="@color/help_body_text_color"
                android:textSize="15sp" >
            </TextView>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="13dp"
            android:text="@string/root_more_information"
            android:textColor="@color/help_body_text_color"
            android:textSize="15sp">
        </TextView>

        <TextView
            android:id="@+id/what_is_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="8dp"
            android:gravity="left|center_vertical"
            android:text="@string/introduction_what_is_root"
            android:textColor="#ff6ba200"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/how_to_get_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:gravity="left|center_vertical"
            android:text="@string/introduction_how_to_get_root"
            android:textColor="#ff6ba200"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="16dp"
            android:text="@string/root_two"
            android:textColor="@color/root_help_text_color"
            android:textSize="18sp" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/root_function_two_one"
            android:textColor="@color/root_introduction_rooted_text_color"
            android:textSize="15sp" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="16dp"
            android:text="@string/root_three"
            android:textColor="@color/root_help_text_color"
            android:textSize="18sp" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/root_function_three_one"
            android:textColor="@color/root_introduction_rooted_text_color"
            android:textSize="15sp" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="16dp"
            android:text="@string/root_four"
            android:textColor="@color/root_help_text_color"
            android:textSize="18sp" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/root_function_four_one"
            android:textColor="@color/root_introduction_rooted_text_color"
            android:textSize="15sp" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="16dp"
            android:text="@string/root_five"
            android:textColor="@color/root_help_text_color"
            android:textSize="18sp" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/root_function_five_one"
            android:textColor="@color/root_introduction_rooted_text_color"
            android:textSize="15sp" >
        </TextView>
    </LinearLayout>

</ScrollView>