<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="0dp"
    android:minWidth="280dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    
    >
    <TextView android:id="@+id/alertdialog_title"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:textSize="18dp"
    	android:text="@string/crash_dialog_title"
    	android:gravity="center"
    	android:layout_gravity="center"
    	android:paddingTop="10dp"
    	android:paddingBottom="10dp"
    	/>    	
  	<LinearLayout
  		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:paddingBottom="2dp">
   	<TextView
    	android:id="@+id/alertdialog_text"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:singleLine="false"    	
    	android:textSize="13dp"
    	android:text="@string/crash_dialog_text"
    	android:paddingTop="10dp"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:lineSpacingExtra="10dp"
    	/>
    	<LinearLayout
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:paddingTop="10dp"
    		>
    		<Button android:id="@+id/sure_report"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:textSize="13dp"
    			android:text="@string/crash_yes"
    			android:layout_marginRight="3dp"
    			android:layout_marginLeft="1dp"
    			android:layout_centerVertical="true"
				android:gravity="center"
    		/>
    		<Button android:id="@+id/cancel_report"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:textSize="13dp"
    			android:text="@string/crash_no"
    			android:layout_marginLeft="3dp"
    			android:layout_marginRight="1dp"
    			android:layout_centerVertical="true"
				android:gravity="center"
    		/>
    	</LinearLayout>
    </LinearLayout>
</LinearLayout>
